new security controller added for jwt claims token generation logic
